Set User.Id to LONG; Add User.RefreshToken
